force-app/main/default/objects/Team_config__mdt/Team_config__mdt.object-meta.xml
<CustomObject>
    <label>Team config</label>
    <pluralLabel>Team configs</pluralLabel>
</CustomObject>