force-app/main/default/objects/Team_config__mdt/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <label>Attorney</label>
    <length>18</length>
    <type>Text</type>
</CustomField>