force-app/main/default/objects/Team_config__mdt/fields/BD_Sr_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>BD_Sr_Vice_President__c</fullName>
    <label>BD Sr. Vice President</label>
    <length>18</length>
    <type>Text</type>
</CustomField>