force-app/main/default/objects/Team_config__mdt/fields/Chief_Development_Officer__c.field-meta.xml
<CustomField>
    <fullName>Chief_Development_Officer__c</fullName>
    <label>Chief Development Officer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>