force-app/main/default/objects/Team_config__mdt/fields/Finance_Sr_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Finance_Sr_Vice_President__c</fullName>
    <label>Finance Sr. Vice President</label>
    <length>18</length>
    <type>Text</type>
</CustomField>